--- a/index.css
+++ b/index.css
@@ -96,6 +96,7 @@ body {
 .about-me-cont img {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
     margin-bottom: 30px;
 }
 .sosmed {
@@ -103,7 +104,11 @@ body {
 }
 .sosmed a {
     padding: 0 15px;
-    font-size: 16px;
+}
+.sosmed a img {
+    height: 30px;
+    width: 30px;
+
 }
 .about-content p {
     font-size: 14px;
@@ -124,7 +129,21 @@ body {
 .skills-cont h2 {
     text-align: center;
 }
+.skill-cont {
+    display: flex;
+    align-items: center;
+}
 .skill {
     font-size: 14px;
     font-weight: 400;
+    width: 400px;
+    margin: 25px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.skill img {
+    height: 110px;
+    width: 100px;
 }
